# jetson-inference-jp6fixes

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  build_xnx_py310.md  test_cyrillic.py
.claude/: settings.local.json
c/: detectNet.cpp  detectNet.h  tensorConvert.cu  tensorConvert.h  tensorNet.cpp
docs/: actionnet.md  aux-contents.md  aux-docker.md  aux-image.md  aux-streaming.md  backgroundnet.md  building-nvcaffe.md  building-repo-2.md  building-repo.md  deep-learning.md  depthnet.md  detectnet-camera-2.md  detectnet-camera.md  detectnet-console-2.md  detectnet-console.md  detectnet-example-2.md  detectnet-snapshot.md  detectnet-tao.md  detectnet-tracking.md  detectnet-training.md  digits-native.md  digits-setup.md  digits-workflow.md  imagenet-camera-2.md  imagenet-camera.md  imagenet-console-2.md  imagenet-console.md  imagenet-custom.md  imagenet-example-2.md  imagenet-example-python-2.md  imagenet-example.md  imagenet-snapshot.md  imagenet-tagging.md  imagenet-training.md  jetpack-setup-2.md  jetpack-setup.md  other-examples.md  posenet.md  pytorch-cat-dog.md  pytorch-collect-detection.md  (+16 more)
examples/: README.md
examples/my-recognition/: CMakeLists.txt  README.md
python/: CMakeLists.txt
python/bindings/: CMakeLists.txt  PyDetectNet.cpp
python/examples/: README.md
python/python/jetson/utils/: __init__.py
tools/seg-img-tool/: CMakeLists.txt
